--- a/erpnext/erpnext_integrations/workspace/erpnext_integrations_settings/erpnext_integrations_settings.json
+++ b/erpnext/erpnext_integrations/workspace/erpnext_integrations_settings/erpnext_integrations_settings.json
@@ -8,7 +8,7 @@
  "hide_custom": 0,
  "icon": "setting",
  "idx": 0,
- "label": "ERPNext Integrations Settings",
+ "label": "BuzzERP Integrations Settings",
  "links": [
   {
    "hidden": 0,
