White-labeled ERPNext to BuzzERP.

--- a/erpnext/setup/workspace/erpnext_settings/erpnext_settings.json
+++ b/erpnext/setup/workspace/erpnext_settings/erpnext_settings.json
@@ -14,12 +14,12 @@
  "idx": 0,
  "is_default": 0,
  "is_standard": 1,
- "label": "ERPNext Settings",
+ "label": "BuzzERP Settings",
  "links": [],
  "modified": "2021-10-26 21:32:55.323591",
  "modified_by": "Administrator",
  "module": "Setup",
- "name": "ERPNext Settings",
+ "name": "BuzzERP Settings",
  "owner": "Administrator",
  "pin_to_bottom": 0,
  "pin_to_top": 0,
