--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "erpnext",
-  "description": "Open Source ERP System powered by the Frappe Framework",
+  "description": "World's best ERP System powered by the BuzzERP Framework",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/frappe/erpnext.git"
   },
   "homepage": "https://erpnext.com",
-  "author": "Frappe Technologies Pvt. Ltd.",
+  "author": "BuzzERP",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/frappe/erpnext/issues"
